--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card" id="welcome">
                 <h1 class="card-body">Coding Quiz Challenge</h1>
                 <p class="charact">This quiz will be on a timer. Incorrect answers will cause further deduction of your
-                    time.
+                    time and score.
                     Good Luck!</p>
                 <button type="button" class="btn" id="startQuiz">Start Quiz</button>
 
