--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <div class="wrapper">
         <title>Challenge 4 - Code Quiz</title>
+    </div>
 </head>
 <header>
     <h1 class="pg">Coding Quiz Challenge</h1>
@@ -71,8 +72,6 @@
                 <button type="button" class="btn" id="goBack">Main Menu</button>
                 <button type="button" class="btn" id="clearScores">Clear All Scores</button>
             </div>
-
-
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
