--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="card" id="quizTime">
-                <h1 class="card" id="question"></h1>
+                <h1 class="card" id="questions"></h1>
                 <div class="card" id="answers">
                     <div class="row">
                         <button type="button" class="btn" id="0"></button>
