--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <div class="wrapper">
         <title>Challenge 4 - Code Quiz</title>
-        <
+    </div>
 </head>
 <header>
     <h1 class="pg">Coding Quiz Challenge</h1>
