--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-            <h1 class="pg">Coding Quiz Challenge</h1>
+        <h1 class="pg">Coding Quiz Challenge</h1>
     </header>
 
     <div class="card">
@@ -75,7 +75,8 @@
         </div>
     </div>
     <script src="./assets/js/script.js">
- </script>
+    </script>
+    </body>
 </body>
 
 </html>
